# rocket-flight-optimizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
RocketOptimizer/: RocketOptimizer.cpp  RocketOptimizer.h
rocket/: rocket.cpp  rocket.h
